--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "goit-js-hw-08",
   "version": "2.0.0",
   "description": "",
-  "homepage": "https://github.com/IvanProkh/goit-js-hw-08#readme",
+  "homepage": "https://github.com/IvanProkh/goit-js-hw-08",
   "scripts": {
     "start": "parcel src/*.html",
     "build": "parcel build src/*.html --public-url /goit-js-hw-08/"
@@ -12,12 +12,14 @@
     "url": "git+https://github.com/IvanProkh/goit-js-hw-08.git"
   },
   "keywords": [],
-  "author": "Alexander Repeta <alexander.repeta@gmail.com>",
+  "author": "Ivan Prokhorets <prohorets.ivan@gmail.com>",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/IvanProkh/goit-js-hw-08/issues"
   },
   "dependencies": {
+    "@vimeo/player": "^2.17.1",
+    "lodash.throttle": "^4.1.1",
     "modern-normalize": "^1.1.0",
     "simplelightbox": "^2.10.3"
   },
